--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -32,14 +32,11 @@ body {
   color: rgb(126, 14, 14);
 }
 
-.header-dropdown {
-  font-weight: bold;
+.navbar-light .navbar-nav .nav-link .icons {
+  width: 46px;
+  height: 46px;
 }
 
-.header-dropdown:hover {
-  cursor: pointer;
-  color: #FFD100;
-}
 
 /* Home Page Styling */
 
@@ -78,13 +75,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 120px;
+  margin-top: 100px;
   margin-bottom: 20px;
 }
 
 .Home-Button {
   background-color: transparent;
-  font-size: 22px;
+  font-size: 28px;
   color: rgb(253,137,83);
   border-width: 4px;
   font-weight: bold;
@@ -97,3 +94,4 @@ body {
   color: rgb(253,137,83);
   background: white;
 }
+
