--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -8,18 +8,18 @@ body {
 
 .navbar,
 .navbar-default {
-  background-color: black;
-  border-bottom: 1px solid white;
+  background-color:  rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid black;
 }
 
 .navbar-light .navbar-brand {
-  color: white;
+  color: black;
   font-weight: bold;
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: white;
-  border-right: 1px solid white;
+  color: black;
+  border-right: 1px solid black;
   margin-right: 10px;
   letter-spacing: 2px;
 }
@@ -56,7 +56,7 @@ body {
   border-radius: 50%;
   height: 400px;
   width: 400px;
-  margin-top: 10px;
+  margin-top: 88px;
   margin-bottom: 10px;
 }
 
