--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -105,7 +105,6 @@ body {
 
 .AboutMe-Title {
   text-align: center;
-  /* text-decoration: underline; */
   color: white;
   font-weight: bold;
   letter-spacing: 2px;
@@ -239,4 +238,74 @@ code {
   border-width: 2px;
   letter-spacing: 1px;
   font-weight: bold;
+}
+
+/* Projects Styling */
+
+.Projects-Container {
+  display: flex;
+  flex-direction: column;
+  background-image: url(https://www.xmple.com/wallpaper/linear-gradient-blue-1920x1080-c2-00ffff-4682b4-a-315-f-14.svg);
+  background-repeat: no-repeat;
+  background-size: 1500px 1000px;
+  height: 800px;
+  width: 100%;
+}
+
+.Projects-Title-Container {
+  margin-top: 120px;
+  margin-bottom: 40px;
+  width: 240px;
+  position: relative;
+  left: 42%;
+}
+
+.Projects-Title {
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  letter-spacing: 2px;
+  border-bottom: 4px solid white;
+  padding-bottom: 2px;
+}
+
+.card-deck .card {
+  margin-top: 25px;
+  font-size: 21px;
+  text-align: center;
+
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 2s; /* Firefox < 16 */
+      -ms-animation: fadein 2s; /* Internet Explorer */
+       -o-animation: fadein 2s; /* Opera < 12.1 */
+          animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
