--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -274,43 +274,58 @@ code {
   font-size: 21px;
   text-align: center;
 
-  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-     -moz-animation: fadein 2s; /* Firefox < 16 */
-      -ms-animation: fadein 2s; /* Internet Explorer */
-       -o-animation: fadein 2s; /* Opera < 12.1 */
-          animation: fadein 2s;
+  -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 3s; /* Firefox < 16 */
+      -ms-animation: fadein 3s; /* Internet Explorer */
+       -o-animation: fadein 3s; /* Opera < 12.1 */
+          animation: fadein 3s;
 }
 
 @keyframes fadein {
-  from { opacity: 0; }
+  from { opacity: -1; }
   to   { opacity: 1; }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-  from { opacity: 0; }
+  from { opacity: -1; }
   to   { opacity: 1; }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-  from { opacity: 0; }
+  from { opacity: -1; }
   to   { opacity: 1; }
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-  from { opacity: 0; }
+  from { opacity: -1; }
   to   { opacity: 1; }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-  from { opacity: 0; }
+  from { opacity: -1; }
   to   { opacity: 1; }
+}
+
+.card-title {
+  font-size: 22px;
+  font-weight: bold;
+  color: rgb(253,137,83);
+}
+
+.card-text {
+  font-size: 12px;
+  text-align: center;
 }
 
 .project-icons {
   width: 46px;
   height: 46px;
+}
+
+.card-footer {
+  padding: 0;
 }
