Changes for page load

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -42,6 +42,7 @@ body {
 
 .Home-Page-Container {
   background-image: url(https://media.giphy.com/media/729Qyvc6cOg7u/giphy.gif);
+  /* background-image: url(https://i.imgur.com/AZRqwmu.mp4); */
   background-repeat: no-repeat;
   background-size: 1500px 1000px;
 }
