--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -42,7 +42,7 @@ body {
 
 .Home-Page-Container {
   background-image: url(https://media.giphy.com/media/729Qyvc6cOg7u/giphy.gif);
-  /* background-image: url(https://i.imgur.com/AZRqwmu.mp4); */
+  /* background-image: url(https://i.imgur.com/ulmXFG4.mp4); */
   background-repeat: no-repeat;
   background-size: 1500px 1000px;
 }
@@ -137,6 +137,24 @@ body {
   width: 460px;
 }
 
+@media screen and (max-width: 992px) {
+  .AboutMe-Photo-Container {
+    display: flex;
+    justify-content: flex-start;
+    position: relative;
+    top: 34%;
+    left: -14%;
+    margin-right: 2px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .AboutMe-Photo {
+    height: 400px;
+    width: 400px;
+  }
+}
+
 
 .AboutMe-Info-Container {
   display: flex;
@@ -159,6 +177,27 @@ body {
   font-size: 22px;
 }
 
+@media screen and (max-width: 992px) {
+  .AboutMe-Info-Container {
+    display: flex;
+    flex-direction: flex-end;
+    flex-direction: column;
+    position: relative;
+    top: 28%;
+    left: -8%;
+    word-wrap: break-word;
+    width: 600px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .AboutMe-Info {
+    color: black;
+    font-size: 17px;
+  }
+}
+
 .Skills-Button {
   position: absolute;
   left: 60%;
@@ -170,6 +209,21 @@ body {
   color: white;
   border-width: 2px;
   border-color: white;
+}
+
+@media screen and (max-width: 992px) {
+  .Skills-Button {
+    position: absolute;
+    left: 60%;
+    top: 119%;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 18px;
+    background-color: transparent;
+    color: white;
+    border-width: 2px;
+    border-color: white;
+  }
 }
 
 .Skills-Button:hover {
@@ -187,12 +241,32 @@ body {
   height: 34px;
 }
 
+@media screen and (max-width: 992px) {
+  .Skills-Icon-One {
+    position: absolute;
+    left: 55.6%;
+    top: 119.4%;
+    width: 34px;
+    height: 34px;
+  }
+}
+
 .Skills-Icon-Two {
   position: absolute;
   left: 75.6%;
   top: 192.4%;
   width: 34px;
   height: 34px;
+}
+
+@media screen and (max-width: 992px) {
+  .Skills-Icon-Two {
+    position: absolute;
+    left: 82%;
+    top: 119.4%;
+    width: 34px;
+    height: 34px;
+  }
 }
 
 .modal-content {
@@ -344,6 +418,18 @@ code {
   width: 100%;
 }
 
+@media screen and (max-width: 992px) {
+  .Contact-Container {
+    display: flex;
+    flex-direction: column;
+    background-image: url(https://www.xmple.com/wallpaper/linear-gradient-blue-1920x1080-c2-00ffff-4682b4-a-315-f-14.svg);
+    background-repeat: no-repeat;
+    background-size: 1500px 1400px;
+    height: 1400px;
+    width: 100%;
+  }
+}
+
 .Contact-Title-Container {
   margin-top: 88px;
   margin-bottom: 2px;
@@ -399,6 +485,13 @@ code {
 .Cowie-Snowboard {
   height: 518px;
   width: 426px;
+}
+
+@media screen and (max-width: 992px) {
+  .Cowie-Snowboard {
+    height: 414.4px;
+    width: 340.8px;
+  }
 }
 
 .Contact-Text-Two {
